  * d/p/045_trayicon-visual.patch: Removed, fixed upstream
  * d/p/003_gdk.pc_privates.patch: Refreshed
  * d/p/043_notebook_scroll.patch: Refreshed
  * d/p/044_tracker_fts.patch: Refreshed

  [ Michael Biebl ]
  * debian/watch:
    - Track .xz tarballs.
  * debian/control.in:
    - Set pkg-gnome-maintainers@lists.alioth.debian.org as Maintainer.

 -- Michael Biebl <biebl@debian.org>  Sun, 16 Oct 2011 19:00:05 +0200

gtk+3.0 (3.0.12-3) unstable; urgency=low

  * 030_xim-modules.patch: stolen from upstream git. Fix the behavior of 
    XIM modules. Closes: #633720.
  * 043_notebook_scroll.patch: handle a few more widgets to avoid 
    alt+scroll being intercepted by ranges, spin buttons, combo boxes…

 -- Josselin Mouette <joss@debian.org>  Thu, 08 Sep 2011 13:01:03 +0200

gtk+3.0 (3.0.12-2) unstable; urgency=low

  [ Josselin Mouette ]
  * Tighten dependencies on libgtk-3-common. Closes: #636766.

  [ Michael Biebl ]
  * debian/patches/045_trayicon-visual.patch: Fix assertion in trayicon-x11
    when visual is not available. Thanks to Vincent Bernat for the patch.
    Closes: #637067
  * debian/libgail-3-0.symbols: Remove trailing empty line which confuses
    dpkg-gensymbols.
  * Bump debhelper compatibility level to 8.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Aug 2011 01:57:26 +0200

gtk+3.0 (3.0.12-1) unstable; urgency=low

  * New upstream release.
    - GdkKeymap: Prevent an infinite loop in the non-XKB case.
      (Closes: #633917)
  * Stop installing libtool .la files.

 -- Michael Biebl <biebl@debian.org>  Thu, 28 Jul 2011 12:45:04 +0200

gtk+3.0 (3.0.11-1) unstable; urgency=low

  * New upstream release.
    - Fixes infinite-loop in GTK_FILE_CHOOSER_ACTION_CREATE_FOLDER.
      (Closes: #628457)
  * debian/patches/044_tracker_fts.patch: Enable Tracker full text search.

 -- Michael Biebl <biebl@debian.org>  Thu, 14 Jul 2011 14:45:24 +0200

gtk+3.0 (3.0.10-1) unstable; urgency=low

  [ Josselin Mouette ]